--- a/index.html
+++ b/index.html
@@ -685,12 +685,12 @@
             <div class="photo-slider">
               <!--
                 ⬇️ TROCAR AS FOTOS AQUI
-                - Agora está usando o arquivo "ft1.jpeg".
-                - Se você subir mais fotos (ft2.jpeg, ft3.jpeg...), é só colocar no array lá embaixo no JavaScript.
+                - Agora está usando o arquivo "ft1.jpeg.jpeg".
+                - Se você subir mais fotos (ft2, ft3...), é só colocar no array lá embaixo no JavaScript.
               -->
               <img
                 id="sliderImage"
-                src="ft1.jpeg"
+                src="img/ft1.jpeg.jpeg"
                 alt="Foto de Pietra"
               />
               <div class="photo-overlay-gradient"></div>
@@ -820,13 +820,12 @@
     // ========== SLIDESHOW DE FOTOS ==========
     (function () {
       // ⬇️ ADICIONE SUAS FOTOS AQUI
-      // No momento está só com "ft1.jpeg".
-      // Se você subir ft2.jpeg, ft3.jpeg etc., é só ir colocando na lista.
+      // Agora está usando "img/ft1.jpeg.jpeg".
       const photos = [
-        "ft1.jpeg",
-        // "ft2.jpeg",
-        // "ft3.jpeg",
-        // "ft4.jpeg",
+        "img/ft1.jpeg.jpeg",
+        // Se você subir mais, é só ir acrescentando aqui:
+        // "img/ft2.jpeg.jpeg",
+        // "img/ft3.jpeg.jpeg",
       ];
 
       const sliderImage = document.getElementById("sliderImage");
