--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
     - Exemplo: "nossa-musica.mp3" ou "audio/nossa-musica.mp3"
   -->
   <audio id="backgroundMusic" loop>
-    <source src="musica.mp3" type="audio/mpeg" />
+    <source src="Natiruts - Sorri, Sou Rei (Áudio Oficial) ft. Claudia Leitte" type="audio/mpeg" />
     Seu navegador não suporta áudio em HTML5.
   </audio>
 
