--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       OU ajuste o caminho abaixo pro nome real do arquivo.
   -->
   <audio id="backgroundMusic" loop>
-    <source src="musica.mp3" type="audio/mpeg" />
+    <source src="audio/musica.mp3" type="audio/mpeg" />
     Seu navegador não suporta áudio em HTML5.
   </audio>
 
