--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
     <div class="floating-heart" style="left: 80%; animation-duration: 20s; animation-delay: 3s;">❤</div>
     <div class="floating-heart" style="left: 25%; animation-duration: 22s; animation-delay: 5s;">❤</div>
     <div class="floating-heart" style="left: 60%; animation-duration: 19s; animation-delay: 8s;">❤</div>
-    <div class="floating-word" style="left: 18%; animation-duration: 24s; animation-delay: 2s;">CORAÇÃO</div>
-    <div class="floating-word" style="left: 72%; animation-duration: 26s; animation-delay: 4s;">DESTINO</div>
-    <div class="floating-word" style="left: 40%; animation-duration: 23s; animation-delay: 7s;">LUZ</div>
-    <div class="floating-word" style="left: 55%; animation-duration: 21s; animation-delay: 10s;">NÓS DOIS</div>
+    <div class="floating-word" style="left: 18%; animation-duration: 24s; animation-delay: 2s;">QUERO</div>
+    <div class="floating-word" style="left: 72%; animation-duration: 26s; animation-delay: 4s;">VOCÊ</div>
+    <div class="floating-word" style="left: 40%; animation-duration: 23s; animation-delay: 7s;">TE</div>
+    <div class="floating-word" style="left: 55%; animation-duration: 21s; animation-delay: 10s;">AMOO</div>
   </div>
 
   <!-- Conteúdo central -->
@@ -351,7 +351,7 @@
 
     <!-- ⬇️ TROQUE ESSA FRASE SE QUISER -->
     <p class="main-phrase">
-      Aqui as lembranças dançam junto com a sua foto, só pra lembrar que o mundo fica mais bonito quando tem você.
+       Só pra lembrar que o mundo fica mais bonito quando tem você, minha princesa!!!!!.
     </p>
 
     <div class="music-wrapper">
@@ -360,7 +360,7 @@
         <span class="music-pulse">
           <span class="music-pulse-inner"></span>
         </span>
-        <span>Ouvir nossa música</span>
+        <span>Ouvir nossa música haha</span>
       </button>
 
       <p class="hint-text">
@@ -371,7 +371,7 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    feito com carinho para <span>Pietra</span>
+    feito com carinho para <span>Pietra inimiga do banho</span>
   </footer>
 
   <!--
