--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
     <div class="floating-heart" style="left: 25%; animation-duration: 22s; animation-delay: 5s;">❤</div>
     <div class="floating-heart" style="left: 60%; animation-duration: 19s; animation-delay: 8s;">❤</div>
     <div class="floating-word" style="left: 18%; animation-duration: 24s; animation-delay: 2s;">QUERO</div>
-    <div class="floating-word" style="left: 72%; animation-duration: 26s; animation-delay: 4s;">VOCÊ</div>
-    <div class="floating-word" style="left: 40%; animation-duration: 23s; animation-delay: 7s;">TE</div>
-    <div class="floating-word" style="left: 55%; animation-duration: 21s; animation-delay: 10s;">AMOO</div>
+    <div class="floating-word" style="left: 72%; animation-duration: 26s; animation-delay: 4s;">AMOOO</div>
+    <div class="floating-word" style="left: 40%; animation-duration: 23s; animation-delay: 7s;">VOCÊ</div>
+    <div class="floating-word" style="left: 55%; animation-duration: 21s; animation-delay: 10s;">TE </div>
   </div>
 
   <!-- Conteúdo central -->
